# flight-booking

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: main.py
app/agents/: booking_agent.py  flight_agent.py  flight_extraction_agent.py  flight_search_agent.py  seat_prefernece_agent.py  seat_selection_agent.py  summarize_agent.py
app/core/: llm.py
app/models/: flight_models.py
app/services/: booking_services.py  flight_services.py  summarize_services.py
app/tools/: apify_browser.py  browserbase_tool.py  kayak_tool.py
app/utils/: config.py  logging.py  usage_utils.py
tests/: conftest.py
tests/tools/: test_apify_browser.py  test_kayak_search_tools.py
