[project]
name = "flight-booking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "asyncio>=4.0.0",
    "html2text>=2025.4.15",
    "logfire>=4.14.2",
    "playwright>=1.55.0",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.12.0",
    "pydantic-settings>=2.11.0",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.1",
    "responses>=0.25.8",
    "rich>=14.2.0",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]

[server]
enableCORS = false
